# qaz

./: .pre-commit-config.yaml  LICENSE  README.md  install  lint  pyproject.toml  setup.cfg  tasks.py
.github/: dependabot.yml
.github/workflows/: ci.yml
configfiles/: .editorconfig  .gitconfig  .gitconfig.diff-so-fancy  .gitignore  .pdbrc.py  .pypirc  .vimrc  .zshrc  RectangleConfig.json  e  github_config.yml  keybindings.json  pythonstartup.py  rectangle.plist  settings.json  starship.toml  virtualenv.ini
configfiles/bpython/: config  my_theme.theme
configfiles/git/: commit-msg.txt  config
git-hooks/: prepare-commit-msg
licenses/: ohmyzsh_LICENSE.txt
qaz/: cli.py  config.py  exceptions.py  module.py  settings.py  utils.py
qaz/application/: __init__.py  _configure.py  _git.py  _install.py  _setup.py  _update.py  _upgrade.py  configure.py  git.py  install.py  setup.py  update.py  upgrade.py
qaz/cli/: __init__.py  _cli.py  _list.py  _logging.py
qaz/managers/: __init__.py  _base.py  _brew.py  _git.py  _npm.py  _pip.py  asdf.py  base.py  brew.py  code.py  files.py  git.py  npm.py  pip.py  pipx.py  shell.py  vs_code.py
qaz/modules/: __init__.py  asdf.py  base.py  brew.py  config.py  docker.py  fonts.py  git.py  iterm2.py  latex.py  macos.py  nodejs.py  python.py  queries.py  registry.py  ruby.py  rust.py  starship.py  tools.py  vim.py  vscode.py  zsh.py
qaz/utils/: files.py  git.py  output.py  shell.py  vs_code.py
qaz_modules/: __init__.py  asdf.py  brew.py  docker.py  fonts.py  git.py  iterm2.py  latex.py  macos.py  nodejs.py  python.py  ruby.py  rust.py  starship.py  tools.py  vim.py  vscode.py  zsh.py
scripts/: configure-git-hooks.sh  set-defaults.sh
zshrc/: _oh-my-zsh.zsh  _zsh.zsh  aactivator.zsh  bat.zsh  exa.zsh  figlet.zsh  fzf.zsh  git.zsh  github.zsh  less.zsh  macos.zsh  mcfly.zsh  pipx.zsh  poetry.zsh  python.zsh  sed.zsh  virtualenv.zsh  zsh.zsh
