[tool.poetry]
name = "qaz"
version = "0.1.0"
description = "Manage your system configuration and install/update tools."
authors = ["Samuel Searles-Bryant <devel@samueljsb.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.8.0"
flake8 = "^3.9.2"
mypy = "^0.812"

[tool.poetry.scripts]
qaz = 'qaz.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
