[tool.poetry]
name = "qaz"
version = "0"
description = "Manage your system configuration and install/update tools."
authors = ["Samuel Searles-Bryant <sam@samueljsb.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8"
humanize = "^3.13.1"
rich = "^10.16.1"

[tool.poetry.dev-dependencies]
black = "*"
isort = ">=5.9"
flake8 = ">=3.9"
mypy = ">=0.902"
invoke = "^1.6.0"

[tool.poetry.scripts]
qaz = 'qaz.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
