[metadata]
name = qaz

[options]
py_modules =
    qaz
    qaz_modules
python_requires = >=3.8
install_requires =
    click >=8
    humanize
    rich

[options.extras_require]
dev =
    black
    flake8
    invoke
    isort
    mypy

[options.entry_points]
console_scripts =
    qaz=qaz.cli:cli

[isort]
profile = black
known_first_party = qaz
lines_after_imports = 2

[flake8]
exclude =
    .venv
extend-ignore = E203, W503
max-complexity = 10
max-line-length = 88

[mypy]
check_untyped_defs = true
exclude = (?x)(
    ^configfiles/
    | ^tasks\.py$
    )
ignore_missing_imports = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
