[metadata]
name = qaz

[options]
packages =
    find:
python_requires = >=3.8
install_requires =
    click >=8
    humanize

[options.entry_points]
console_scripts =
    qaz = qaz.cli:cli

[isort]
profile = black
known_first_party = qaz
force_single_line = true
lines_after_imports = 2

[flake8]
max-complexity = 10
max-line-length = 88
# Allow unused imports in __init__.py files for convenience imports.
per-file-ignores =
    */__init__.py:F401

[mypy]
check_untyped_defs = true
ignore_missing_imports = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
